Remove usage of apis deprecated in Java 9.